--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
     <title>Hiraeth</title>
 
     <link rel="stylesheet" href="style.css">
+
+    <script src="https://cdn.jsdelivr.net/npm/p5@1.4.0/lib/p5.min.js"></script>
+    <script src="sketch.js"></script>
 </head>
 <body>
-    <section id="hero-section"><div id="hero-title"><h1>Hiraeth</h1></div></section>
+    <section id="hero-section"><div id="hero-title"><h1>Hiraeth</h1><p>uwu what's this?!?!</p></div></section>
 </body> 
 </html>
