--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,7 +12,43 @@
     <script src="https://cdn.jsdelivr.net/npm/p5@1.4.0/lib/p5.min.js"></script>
     <script src="sketch.js"></script>
 </head>
+
 <body>
-    <section id="hero-section"><div id="hero-title"><h1>Hiraeth</h1><p>uwu what's this?!?!</p></div></section>
-</body> 
+    <section id="hero-section">
+        <div id="hero-title">
+            <div id="hero-title-left">
+                <h1>Hiraeth</h1>
+                <p>uwu what's this?!?!</p>
+            </div>
+            <div id="hero-title-right">
+                <ul id="hero-nav">
+                    <li class="hero-nav-item">
+                        <a href="#projects">Projects</a>
+                    </li>
+                    <li class="hero-nav-item">
+                        <a href="#Info">Info</a>
+                    </li>
+                    <li class="hero-nav-item">
+                        <a href="">Index</a>
+                    </li>
+                    <li class="hero-nav-item">
+                        <a href="#Contact">Contact</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </section>
+    <section id="projects">
+        <div id="projects-container">
+            <div id="projects-title">
+                <h1>Projects</h1>
+                <p>uwu what's this?!?!</p>
+            </div>
+            <ul id="project-list">
+                [ W I P ]
+            </ul>
+        </div>
+    </section>
+</body>
+
 </html>
