--- a/index.html
+++ b/index.html
@@ -45,7 +45,50 @@
                 <p>uwu what's this?!?!</p>
             </div>
             <ul id="project-list">
-                [ W I P ]
+                <li class="project">
+                    <a class="project-name" href=""><h1>Smiley</h1></a>
+                    <img class="project-backdrop" src="./Smiley.jpg" alt="">
+                </li>
+                <li class="project">
+                    <a class="project-name" href=""><h1>Skull</h1></a>
+                    <img class="project-backdrop" style="background-color: #e01111df;" src="./Skull.png" alt="">
+                </li>
+                <li class="project">
+                    <a class="project-name" href=""><h1>Phoenix</h1></a>
+                    <img class="project-backdrop" src="./Phoenix.svg" alt="">
+                </li>
+                <li class="project">
+                    <a class="project-name" href=""><h1>Management</h1></a>
+                    <img class="project-backdrop" src="./Smiley.jpg" alt="">
+                </li>
+                <li class="project">
+                    <a class="project-name" href=""><h1>Nurden</h1></a>
+                    <img class="project-backdrop" src="https://cdn.discordapp.com/avatars/612776793748799526/5ec23a7824c2dd4f336826d0e83936b7.png?size=4096" alt="">
+                </li>
+                <li class="project">
+                    <a class="project-name" href=""><h1>Overlay</h1></a>
+                    <img class="project-backdrop" src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fclipartcraft.com%2Fimages%2Fdiscord-logo-transparent-better.png&f=1&nofb=1" alt="">
+                </li>
+                <li class="project">
+                    <a class="project-name" href=""><h1>MDoC</h1></a>
+                    <img class="project-backdrop" src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fcdn0.iconfinder.com%2Fdata%2Ficons%2Fsecurity-16%2F100%2F09-512.png&f=1&nofb=1" alt="">
+                </li>
+                <li class="project">
+                    <a class="project-name" href=""><h1>ZHub</h1></a>
+                    <img class="project-backdrop" src="" alt="">
+                </li>
+                <li class="project">
+                    <a class="project-name" href=""><h1>LampShade</h1></a>
+                    <img class="project-backdrop" src="LampShade.png" alt="">
+                </li>
+                <li class="project">
+                    <a class="project-name" href=""><h1>Xander</h1></a>
+                    <img class="project-backdrop" src="Xander.png" alt="">
+                </li>
+                <li class="project">
+                    <a class="project-name" href=""><h1>Tawjihi</h1></a>
+                    <img class="project-backdrop" src="./Tawjihi.png" alt="">
+                </li>
             </ul>
         </div>
     </section>
