--- a/chloe.html
+++ b/chloe.html
@@ -17,7 +17,7 @@
     <section id="hero-section">
         <div id="hero-title">
             <div id="hero-title-left">
-                <h1>Chloe</h1>
+                <h1>Chlóe</h1>
                 <p>Happy Birthday</p>
             </div>
         </div>
