--- a/index.html
+++ b/index.html
@@ -47,19 +47,19 @@
             <ul id="project-list">
                 <li class="project">
                     <a class="project-name" href=""><h1>Smiley</h1></a>
-                    <img class="project-backdrop" src="./Smiley.jpg" alt="">
+                    <img class="project-backdrop" src="./assets/Smiley.jpg" alt="">
                 </li>
                 <li class="project">
                     <a class="project-name" href=""><h1>Skull</h1></a>
-                    <img class="project-backdrop" style="background-color: #e01111df;" src="./Skull.png" alt="">
+                    <img class="project-backdrop" style="background-color: #e01111df;" src="./assets/Skull.png" alt="">
                 </li>
                 <li class="project">
                     <a class="project-name" href=""><h1>Phoenix</h1></a>
-                    <img class="project-backdrop" src="./Phoenix.svg" alt="">
+                    <img class="project-backdrop" src="./assets/Phoenix.svg" alt="">
                 </li>
                 <li class="project">
                     <a class="project-name" href=""><h1>Management</h1></a>
-                    <img class="project-backdrop" src="./Smiley.jpg" alt="">
+                    <img class="project-backdrop" src="./assets/Smiley.jpg" alt="">
                 </li>
                 <li class="project">
                     <a class="project-name" href=""><h1>Nurden</h1></a>
@@ -79,15 +79,15 @@
                 </li>
                 <li class="project">
                     <a class="project-name" href=""><h1>LampShade</h1></a>
-                    <img class="project-backdrop" src="LampShade.png" alt="">
+                    <img class="project-backdrop" src="./assets/LampShade.png" alt="">
                 </li>
                 <li class="project">
                     <a class="project-name" href=""><h1>Xander</h1></a>
-                    <img class="project-backdrop" src="Xander.png" alt="">
+                    <img class="project-backdrop" src="./assets/Xander.png" alt="">
                 </li>
                 <li class="project">
                     <a class="project-name" href=""><h1>Tawjihi</h1></a>
-                    <img class="project-backdrop" src="./Tawjihi.png" alt="">
+                    <img class="project-backdrop" src="./assets/Tawjihi.png" alt="">
                 </li>
             </ul>
         </div>
