--- a/greg/index.html
+++ b/greg/index.html
@@ -6,8 +6,13 @@
     <title>Greg Hub</title>
 </head>
 <body>
-    <section id="">
-
+    <section id="greg-section">
+        <h1 id="title"></h1>
+        <ul id="links">
+            <li class="link">
+                <a href="./tree.html">tree generator</a>
+            </li>
+        </ul>
     </section>
 </body>
 </html>
