--- a/greg/index.html
+++ b/greg/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <section id="greg-section">
-        <h1 id="title"></h1>
+        <h1 id="title">Greg Hub</h1>
         <ul id="links">
             <li class="link">
                 <a href="./tree.html">tree generator</a>
