--- a/greg/index.html
+++ b/greg/index.html
@@ -5,10 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Greg Hub</title>
     <link rel="stylesheet" href="./style.css">
+
+    <script src="https://cdn.jsdelivr.net/npm/p5@1.4.0/lib/p5.min.js"></script>
+    <script src="./greg.js"></script>
 </head>
 <body>
     <section id="greg-section">
-        <h1 id="title">Greg Hub</h1>
+        <h1 id="title">Greg</h1>
         <ul id="links">
             <li class="link">
                 <a href="./tree.html">tree generator</a>
