--- a/greg/index.html
+++ b/greg/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <section id="greg-section">
-        <h1 id="title">Greg</h1>
+        <h1 id="title">Elia</h1>
         <ul id="links">
             <li class="link">
                 <a href="./tree.html">tree generator</a>
