--- a/elia/index.html
+++ b/elia/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./style.css">
 
     <script src="https://cdn.jsdelivr.net/npm/p5@1.4.0/lib/p5.min.js"></script>
-    <script src="./greg.js"></script>
+    <script src="./elia.js"></script>
 </head>
 <body>
     <section id="greg-section">
