added elia as a project moment

--- a/index.html
+++ b/index.html
@@ -89,6 +89,10 @@
                     <a class="project-name" href=""><h1>Tawjihi</h1></a>
                     <img class="project-backdrop" src="./assets/Tawjihi.png" alt="">
                 </li>
+                <li class="project">
+                    <a class="project-name" href="./elia/index.html"><h1>Elia</h1></a>
+                    <img class="project-backdrop" src="./assets/Smiley" alt="">
+                </li>
             </ul>
         </div>
     </section>
