--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                 </li>
                 <li class="project">
                     <a class="project-name" href="./elia/index.html"><h1>Elia</h1></a>
-                    <img class="project-backdrop" src="./assets/Smiley" alt="">
+                    <img class="project-backdrop" src="./assets/Smiley.jpg" alt="">
                 </li>
             </ul>
         </div>
