--- a/elia/tree.html
+++ b/elia/tree.html
@@ -20,7 +20,7 @@
                 </div>
             </div>
             <div id="topbar-right">
-
+                <div id="node-tree-title">New Node Tree</div>
             </div>
         </div>
         <div id="node-board">
