--- a/elia/tree.html
+++ b/elia/tree.html
@@ -16,7 +16,7 @@
         <div id="topbar">
             <div id="topbar-left">
                 <div id="topbar-title-text">
-                    elia | <span class="branch-font">tree generator<span>
+                    elia | <span class="branch-font">tree generator (discontinued)<span>
                 </div>
             </div>
             <div id="topbar-right">
