--- a/elia/index.html
+++ b/elia/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Greg Hub</title>
+    <title>Elia Hub</title>
     <link rel="stylesheet" href="./style.css">
 
     <script src="https://cdn.jsdelivr.net/npm/p5@1.4.0/lib/p5.min.js"></script>
@@ -14,7 +14,7 @@
         <h1 id="title">Elia</h1>
         <ul id="links">
             <li class="link">
-                <a href="./tree.html">tree generator</a>
+                <a href="./tree.html">tree generator (discontinued)</a>
             </li>
         </ul>
     </section>
