--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 </li>
                 <li class="project">
                     <a class="project-name" href="https://discord.gg/fJNtEscY9Z"><h1>ZHub<br>(Discord)</h1></a>
-                    <img class="project-backdrop" src="" alt="">
+                    <img class="project-backdrop" src="https://cdn.discordapp.com/icons/416974570671570947/e56cfe6b654ac960e78045841afb6062.png?size=4096" alt="">
                 </li>
                 <li class="project">
                     <a class="project-name" href="#"><h1>LampShade<br>(Private)</h1></a>
@@ -91,7 +91,7 @@
                 </li>
                 <li class="project">
                     <a class="project-name" href="./elia/index.html"><h1>Elia</h1></a>
-                    <img class="project-backdrop" src="./assets/Smiley.jpg" alt="">
+                    <img class="project-backdrop" src="https://cdn.discordapp.com/avatars/257482333278437377/a375b97744f2b481c266854d09abe215.png?size=4096" alt="">
                 </li>
             </ul>
         </div>
