Final tweaks to ayu's website

--- a/ayu/index.html
+++ b/ayu/index.html
@@ -15,6 +15,10 @@
     <script defer src="./index.js"></script>
 </head>
 <body>
+    <!-- <div id="audio">
+        <p>Stray Kids - Red Lights (Bang chan, Hyujin)</p>
+        <input type="range" min="0" max="100" value="50" name="volume-slider" id="volume-slider">
+    </div> -->
     <div class="view" id="ayumoment">
         <h1 id="ayu">Ayu</h1>
         <img id="gif" src="./ayu.gif" alt="oop">
@@ -35,6 +39,42 @@
         <p id="warning"><span>*[</span>translation may be entirely inaccurate <3
             <span id="sponsor"> - Idea provided by Elia</span>
         </p>
+    </div>
+    <div class="view" id="messages">
+        <div id="message-container">
+            <div class="card">
+                <!-- <img src="" alt="" class="picture"> -->
+                <h1 class="name">Dilawar Khan</h1>
+                <p class="message">My dear love and live , I love you so much in the world and I live with you till the death
+                    I love you so much I want to marry you  ❤</p>
+            </div>
+            <div class="card">
+                <!-- <img src="" alt="" class="picture"> -->
+                <h1 class="name">Rory</h1>
+                <p class="message">You are a cool person and I'm happy to call you one of my bestfriends Thank you for everything <3</p>
+            </div>
+            <div class="card">
+                <!-- <img src="" alt="" class="picture"> -->
+                <h1 class="name">Caitlyn B</h1>
+                <p class="message">You are the most kindest, smartest unicorn I know</p>
+            </div>
+            <div class="card">
+                <!-- <img src="" alt="" class="picture"> -->
+                <h1 class="name">Elia</h1>
+                <p class="message">cool ayu moment moment is momenting coolly moment moment</p>
+            </div>
+            <div class="card">
+                <!-- <img src="" alt="" class="picture"> -->
+                <h1 class="name">Chlóe</h1>
+                <p class="message">Hi Ayuuuu!!!! It's Chlóe here! Just letting you know you're very handsome and amazing!! Thank you for being such a cool friend 
+                    to me and Elia. I hope you're having an awesome day 💖</p>
+            </div>
+            <div class="card">
+                <!-- <img src="" alt="" class="picture"> -->
+                <h1 class="name">Hiraeth</h1>
+                <p class="message">Welp, It's like almost 2 months late however I tried to put a hefty amount of effort in to make it nice, while having psychometrics and getting bamboozled with a corona moment, but alas deadline so i can't really add much else (btw i was gonna make Stray Kids - Red Lights (Bang chan, Hyujin) play in the background everytime you open this site (with an audio control ofc) but elia stopped me. How do you feel about it?)</p>
+            </div>
+        </div>
     </div>
 </body>
 </html>
